--- a/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
@@ -23,13 +23,8 @@
   }
 
   .page-head__top-menu {
-    #block-openy_carnation-main-menu .menu-item-home {
+    #block-openy-carnation-main-menu .menu-item-home {
       display: none;
-    }
-
-    .navbar-nav {
-      width: 100%;
-      margin: 0 !important;
     }
   }
 
@@ -49,14 +44,6 @@
       }
     }
 
-    .logo.navbar-btn.pull-left {
-      display: block !important;
-    }
-
-    .logo.navbar-btn.pull-left img {
-      width: 100px !important;
-    }
-
     .name.navbar-brand {
       display: none;
     }
@@ -65,16 +52,8 @@
       background: none !important;
     }
 
-    &.navbar-fixed-top.visible-xs.visible-sm.affix-top {
+    &.fixed-top.visible-xs.visible-sm.affix-top {
       height: 0 !important;
-    }
-  }
-
-  .page-head__logo a {
-    color: white !important;
-
-    &:hover {
-      color: white;
     }
   }
 
