--- a/themes/openy_themes/openy_carnation/src/scss/modules/_headerbanner.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_headerbanner.scss
@@ -1,8 +1,12 @@
 .banner-zone-node {
   position: relative;
 
-  .banner-image img {
-    width: 100%;
+  .banner-image {
+    max-height: 700px;
+
+    img {
+      width: 100%;
+    }
   }
 
   .banner-cta {
