--- a/themes/openy_themes/openy_carnation/templates/menu/menu--main.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/menu--main.html.twig
@@ -31,11 +31,10 @@
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    {% set attributes = attributes.addClass(['nav-level-1', 'nav', 'navbar-nav', 'float-lg-right']) %}
-    <ul{{ attributes }}>
+    <ul{{ attributes.addClass('navbar nav nav-level-1 pt-3 m-0') }}>
     {% for item in items %}
       {% set ia = item.attributes %}
-      {% set ia = ia.addClass('dropdown nav-level-2') %}
+      {% set ia = ia.addClass('nav-level-2') %}
       <li{{ item.attributes.addClass('menu-item-' ~ item.title|clean_class) }}>
         {% if item.below %}
           <a data-toggle="dropdown" href="{{ item.url }}">
@@ -64,7 +63,7 @@
 {% macro menu_links_level_2(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    <ul class="nav dropdown-menu row-level-2 row">
+    <ul class="dropdown-menu row-level-2 row">
     {% for item in items %}
       {% set ia = item.attributes.addClass(['nav-level-3', 'col-md-3', 'col-lg-2', 'menu-item-' ~ item.title|clean_class]) %}
       <li{{ ia }}>
