More work on the header and porting over JS from dayton. Converting to BS4.

--- a/themes/openy_themes/openy_carnation/src/scss/layouts/_tab.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/layouts/_tab.scss
@@ -76,12 +76,12 @@
       color: white;
     }
 
-    .nav-level-2.open,
+    .nav-level-2.show,
     .row-level-2 {
       background-color: transparent;
     }
 
-    .nav-level-2.open .row-level-2 {
+    .nav-level-2.show .row-level-2 {
       border-bottom: 1px solid rgba(white, 0.2);
     }
 
