Fixes mega menu dropdowns on desktop+

--- a/themes/openy_themes/openy_carnation/src/scss/modules/_header.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_header.scss
@@ -39,9 +39,9 @@ body.with-banner {
       background-color: $gray-700;
     }
 
-    &.menu-in {
-      background-color: $blue;
-    }
+    //&.menu-in {
+    //  background-color: $blue;
+    //}
   }
 }
 
