--- a/themes/openy_themes/openy_carnation/templates/menu/menu--main.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/menu--main.html.twig
@@ -31,20 +31,20 @@
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    <ul{{ attributes.addClass('navbar nav nav-level-1 pt-3 pb-0 m-0') }}>
+    <ul{{ attributes.addClass('navbar nav nav-fill align-items-center nav-level-1 pt-3 pb-0 m-0') }}>
     {% for item in items %}
       {% set ia = item.attributes %}
-      {% set ia = ia.addClass('nav-level-2') %}
+      {% set ia = ia.addClass('nav-item nav-level-2') %}
       <li{{ item.attributes.addClass('menu-item-' ~ item.title|clean_class) }}>
         {% if item.below %}
-          <a data-toggle="dropdown" href="{{ item.url }}">
+          <a data-toggle="dropdown" href="{{ item.url }}" class="nav-link">
             {{ item.title }}
             <i class="fa fa-angle-up" aria-hidden="true"></i>
             <i class="fa fa-angle-down" aria-hidden="true"></i>
           </a>
           {{ menus.menu_links_level_2(item.below, attributes, menu_level + 1) }}
         {% else %}
-          <a href="{{ item.url }}">
+          <a href="{{ item.url }}" class="nav-link">
             {{ item.title }}
           </a>
         {% endif %}
@@ -63,9 +63,9 @@
 {% macro menu_links_level_2(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    <ul class="dropdown-menu row-level-2 row">
+    <ul class="dropdown-menu row-level-2 d-flex fade">
     {% for item in items %}
-      {% set ia = item.attributes.addClass(['nav-level-3', 'col-md-3', 'col-lg-2', 'menu-item-' ~ item.title|clean_class]) %}
+      {% set ia = item.attributes.addClass(['nav-level-3 col-md-3 col-lg-2 menu-item-' ~ item.title|clean_class]) %}
       <li{{ ia }}>
         {% if item.below %}
           <a href="{{ item.url }}">
